--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="softBlue">#A3D4FF</color>
     <color name="netral">#F0F8FF</color>
     <color name="grey">#B0B0B0</color>
+    <color name="purple">#BF00FF</color>
 
 </resources>
