--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,10 @@
     </style>
 
     <style name="Theme.HuddleUp" parent="Base.Theme.HuddleUp" />
+
+    <style name="Theme.ManajemenEvent" parent="Theme.AppCompat.DayNight">
+        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorAccent">@color/teal_200</item>
+        <item name="colorPrimaryDark">@color/purple_700</item>
+    </style>
 </resources>
