--- a/app/src/main/res/layout/activity_event_checked_in.xml
+++ b/app/src/main/res/layout/activity_event_checked_in.xml
@@ -1,270 +1,223 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true">
+    android:fillViewport="true"
+    android:id="@+id/ticketLayout"
+    android:background="@drawable/pudar_balik">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/main"
+    <LinearLayout
+        android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:context=".detailEvent"
-        android:background="@drawable/bg_detailevent">
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cardView"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="40dp"
-            app:cardCornerRadius="16dp"
-            app:cardElevation="8dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="110dp"
-                android:layout_height="110dp"
-                android:adjustViewBounds="true"
-                android:contentDescription="@null"
-                android:scaleType="fitCenter"
-                app:srcCompat="@drawable/event" />
-        </androidx.cardview.widget.CardView>
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-            android:id="@+id/eventName"
+            android:id="@+id/tvde_Back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="65dp"
-            android:layout_marginEnd="27dp"
-            android:fontFamily="@font/poppinsmedium"
-            android:textColor="@color/white"
-            android:textSize="15sp"
-            android:text="Workshop Penulisan Artikel Ilmiah"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/cardView"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/textView9"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Penggunaan Artificial Intelligence"
-            android:fontFamily="@font/poppinsmedium"
-            android:textColor="@color/white"
-            android:textSize="15sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/cardView"
-            app:layout_constraintTop_toBottomOf="@+id/eventName" />
-
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="35dp"
-            android:layout_marginTop="160dp"
-            android:background="@drawable/kalender"
-            android:gravity="center"
-            android:orientation="vertical"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/poppinsmedium"
-                android:text="Feb"
-                android:textColor="@color/white"
-                android:textSize="12sp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/poppinsmedium"
-                android:text="26"
-                android:textColor="@color/white"
-                android:textSize="20sp" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/textView10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="49dp"
-            android:layout_marginEnd="118dp"
-            android:fontFamily="@font/poppinsmedium"
-            android:textColor="@color/white"
-            android:textSize="17sp"
-            android:text="Rabu, Februari 2025"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/linearLayout"
-            app:layout_constraintTop_toBottomOf="@+id/textView9" />
-
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="118dp"
-            android:text="08.00 - 11.30 WIB"
-            android:fontFamily="@font/poppinsmedium"
-            android:textColor="@color/white"
-            android:textSize="15sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/linearLayout"
-            app:layout_constraintTop_toBottomOf="@+id/textView10" />
-
-        <LinearLayout
-            android:id="@+id/location"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/bg_event"
-            android:orientation="horizontal"
-            android:padding="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textView11">
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="match_parent"
-                android:contentDescription="@null"
-                android:src="@drawable/loc" />
-
-            <TextView
-                android:id="@+id/textViewLocation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="40dp"
-                android:layout_marginTop="8dp"
-                android:fontFamily="@font/poppinsmedium"
-                android:text="Zoom Meeting"
-                android:textColor="@color/white"
-                android:textSize="16sp" />
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:id="@+id/linearLayout2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/bg_event"
-            android:elevation="8dp"
-            android:orientation="horizontal"
-            android:padding="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/location">
-
-            <TextView
-                android:id="@+id/textViewSpeaker"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:fontFamily="@font/poppinsmedium"
-                android:text="Narasumber: Assoc. Prof. Muhammad Roil Bilad (Universiti Brunei Darussalam)"
-                android:textColor="@color/white"
-                android:textSize="16sp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/status"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="460dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/btn_login"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                android:id="@+id/textViewEventTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/white"
-                android:textSize="16sp"
-                android:textStyle="bold"/>
-
-            <TextView
-                android:id="@+id/textViewStatus"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:textColor="@color/white"
-                android:textSize="15sp" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/textView12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="300dp"
-            android:fontFamily="@font/poppinsmedium"
-            android:textColor="@color/white"
-            android:textSize="17sp"
-            android:text="About Event"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/status" />
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView12">
-
-            <TextView
-                android:id="@+id/textViewDeskripsi"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Sehubungan dengan semakin berkembangnya Artificial Intelligence (AI), membuka peluang bagi dosen dan peneliti untuk memaksimalkan penggunaan AI dalam membantu penulisan artikel ilmiah pada jurnal internasional bereputasi. Namun, belum semua dosen dan peneliti mengetahui cara penyempurnaan penulisan artikel ilmiah dengan bantuan AI, dengan tetap memperhatikan kaidah-kaidah ilmiah yang diperbolehkan. Oleh karena itu, Sub-Direktorat Publikasi Ilmiah dan Ketahanan Jurnal DRPM akan melaksanakan kegiatan workshop penggunaan AI dalam penulisan artikel ilmiah dan mengundang Bapak/Ibu/Saudara/i untuk menghadiri webinar kami yang berjudul WORKSHOP PENULISAN ARTIKEL ILMIAH UNTUK JURNAL INTERNASIONAL BEREPUTASI: PENGGUNAAN ARTIFICIAL INTELLIGENCE."
-                android:textSize="12sp"
-                android:textColor="@color/white"
-                android:fontFamily="@font/poppinsmedium"
-                android:breakStrategy="simple"
-                android:justificationMode="inter_word"/>
-        </ScrollView>
-
-        <TextView
-            android:id="@+id/tvdBack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
             android:layout_marginTop="30dp"
-            android:layout_marginStart="290dp"
+            android:layout_marginEnd="70dp"
             android:text="@string/back"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:fontFamily="@font/poppinsmedium"
-            android:textColor="@color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:textColor="@color/white" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+        <TextView
+            android:id="@+id/tv_de"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:padding="2dp"
+            android:gravity="center"
+            android:textSize="22sp"
+            android:text="Event Ticket"
+            android:textColor="@color/white"
+            android:fontFamily="@font/poppinsmedium"/>
+        </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/header">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            app:cardCornerRadius="18dp"
+            app:cardElevation="4dp"
+            android:layout_marginStart="35dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginTop="30dp">
+        <FrameLayout
+            android:layout_width="300dp"
+            android:layout_height="300dp">
+        <ImageView
+            android:id="@+id/qrCodeImage"
+            android:layout_width="250dp"
+            android:layout_height="250dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="25dp"
+            android:layout_marginBottom="40dp"
+            android:src="@drawable/qrcode" />
+        </FrameLayout>
+        </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/qrCodeImage"
+        android:orientation="vertical"
+        android:padding="8dp"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="50dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="15dp"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Event Name"
+                android:textSize="18sp"
+                android:textColor="@color/grey"
+                android:fontFamily="@font/poppinsmedium"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Waktu"
+                android:textSize="18sp"
+                android:textColor="@color/grey"
+                android:fontFamily="@font/poppinsmedium"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="0dp"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <TextView
+                android:id="@+id/txtJudul"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Lorem ipsum"
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/poppinsmedium"/>
+
+            <TextView
+                android:id="@+id/txtWaktu"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="00.00 - 00.00"
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/poppinsmedium"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="50dp"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Tanggal"
+                android:textSize="18sp"
+                android:textColor="@color/grey"
+                android:fontFamily="@font/poppinsmedium"/>
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Tempat"
+                android:textColor="@color/grey"
+                android:textSize="18sp"
+                android:fontFamily="@font/poppinsmedium"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="0dp"
+            android:orientation="horizontal"
+            android:weightSum="2">
+
+            <TextView
+                android:id="@+id/txtTanggal"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="XX XX 20XX"
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/poppinsmedium"/>
+
+            <TextView
+                android:id="@+id/txtLokasi"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Zoom Meeting"
+                android:textSize="18sp"
+                android:textColor="@color/white"
+                android:fontFamily="@font/poppinsmedium"/>
+        </LinearLayout>
+    </LinearLayout>
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_saveImg"
+        android:layout_width="350dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="800dp"
+        android:layout_marginEnd="100dp"
+        android:background="@drawable/btn_siginsigin"
+        android:fontFamily="@font/poppinsmedium"
+        android:text="Save Image"
+        android:elevation="8dp"
+        android:textSize="18sp"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
