--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="biruMuda">#4CABF0</color>
-    <color name="tosca">#57C4B6</color>
-    <color name="toscaTua">#3A9F99</color>
-    <color name="toscaMuda">#A7E8E1</color>
-    <color name="softBlue">#A3D4FF</color>
-    <color name="netral">#F0F8FF</color>
-    <color name="grey">#B0B0B0</color>
-
+    <color name="green_primary">#4CAF50</color>
+    <color name="green_secondary">#388E3C</color>
+    <color name="green_accent">#81C784</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="green_dark">#388E3C</color>   <!-- Hijau tua -->
+    <color name="green_text">#1B5E20</color>   <!--  teks -->
 </resources>
