--- a/app/src/main/res/layout/n_activity_event_ku.xml
+++ b/app/src/main/res/layout/n_activity_event_ku.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EventKu"
+    tools:context=".N_EventKu"
     android:background="@drawable/background">
 
     <LinearLayout
@@ -54,7 +54,7 @@
         app:layout_constraintTop_toBottomOf="@id/header"
         app:layout_constraintVertical_bias="0.0"
         tools:itemCount="10"
-        tools:listitem="@layout/item_event"/>
+        tools:listitem="@layout/n_item_event"/>
 
 
 
