--- a/app/src/main/res/layout/n_activity_launcher.xml
+++ b/app/src/main/res/layout/n_activity_launcher.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LauncherActivity"
+    tools:context=".N_LauncherActivity"
     android:background="@drawable/bg_launcher">
 
 
